bug fixes, make align for up to 20 better

--- a/html/css/math_one.css
+++ b/html/css/math_one.css
@@ -4,73 +4,79 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-the-big-picture/blob/master/LICENSE)
  */
 body {
-  background: url('../../pictures/background/4.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
+	background: url('../../pictures/background/4.jpg') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	-o-background-size: cover;
 }
 
 #top-half {
-  background: url('../../pictures/background/4.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-  overflow: hidden;
-  height: 50vh;
-  position: relative;
+	background: url('../../pictures/background/4.jpg') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	-o-background-size: cover;
+	overflow: hidden;
+	height: 90vh;
+	position: relative;
 }
 
 .wrong_answer {
-  display: inline-block;
-  background-color: #ccc;
-  border-radius: 15px;
-  border: 1px solid #555;
-  padding: 10px;
-  margin-right: 10px;
+	display: inline-block;
+	background-color: #ccc;
+	border-radius: 15px;
+	border: 1px solid #555;
+	padding: 10px;
+	margin-right: 10px;
 }
 
 .correct_answer {
-  display: inline-block;
-  background-color: #ccc;
-  border-radius: 15px;
-  border: 1px solid #555;
-  padding: 10px;
-  margin-right: 10px;
+	display: inline-block;
+	background-color: #ccc;
+	border-radius: 15px;
+	border: 1px solid #555;
+	padding: 10px;
+	margin-right: 10px;
 }
 
 .text_style {
-  font-size: 100px;
-  font-weight: bold;
-  text-align: center;
+	font-size: 100px;
+	font-weight: bold;
+	text-align: center;
+	line-height: 1.1;
 }
 
 @keyframes blink {
-  0% {
-    background-color: #ccc;
-  }
-  50% {
-    background-color: white;
-  }
-  100% {
-    background-color: #ccc;
-  }
+	0% {
+		background-color: #999;
+	}
+	50% {
+		background-color: white;
+	}
+	100% {
+		background-color: #999;
+	}
 }
 
 
 .blink_corect_answer {
-  animation: blink 2s infinite;
+	animation: blink 2s infinite;
 }
 
 .answer_divs {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 .answer_divs_focus {
-  background-color: #999;
+	background-color: #999;
 }
 
 #correct_answer_div {
-  display: none;
+	opacity: 0;
+}
+
+.question_div {
+	display: inline-block;
+	vertical-align: top;
 }
